fix : 1.launch cat too small in mobile.2.iPhonexmax nav error

--- a/src/views/home/navbar/index.css
+++ b/src/views/home/navbar/index.css
@@ -1,6 +1,6 @@
 div.navbar-nav {
     width           : 100%;
-    height          : 38em;
+    height          : 42em;
     color           : rgba(0, 0, 0, 0.7);
     font-family     : DINCondensed;
     display         : flex;
@@ -9,21 +9,21 @@ div.navbar-nav {
     position : relative;
 }
 
-div.navbar-nav > img.logo {
+div.navbar-logos > img.logo {
     width   : 9rem;
     min-width: 300px;
     height  : auto;
     display : none;
 }
 
-div.navbar-nav > img.logo.active {
+div.navbar-logos > img.logo.active {
     display : block;
 }
 
 div.navbar-nav-items {
     width         : 100%;
     height        : 100px;
-    margin-top: 3em;
+    margin        : 2em 0;
     box-sizing    : border-box;
     line-height   : 2em;
     padding       : 0 3em;
